# agent-tool-pdf-vlm-renderer

./: CHANGELOG.md  README.md  pyproject.toml
src/pdf_vlm_renderer/: __init__.py  models.py  render.py
tests/: conftest.py  test_render.py
